--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "time-menager",
-	"version": "0.0.2.1",
+	"name": "time-rush",
+	"version": "0.0.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
