--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "time-rush",
-	"version": "0.0.4",
+	"version": "0.0.4.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -11,7 +11,10 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.45",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.10",
 		"vite": "^4.5.1"
 	},
 	"type": "module",
