--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Chronos",
+	"name": "chronos",
 	"version": "0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -19,6 +19,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chart.js": "^4.4.7",
 		"pg": "^8.12.0",
 		"tailwind-scrollbar": "^3.1.0"
 	}
