--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.45",
@@ -20,6 +21,7 @@
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.4.7",
+		"dotenv": "^16.4.7",
 		"pg": "^8.12.0",
 		"tailwind-scrollbar": "^3.1.0"
 	}
