--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.20",
+		"fluid-tailwind": "^1.0.4",
 		"postcss": "^8.4.45",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.10",
