--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+# Netrwork
 PORT=4000
 HOST=127.0.0.1
+# Database
+DB_USER=root
+DB_HOST=localhost
+DB_DATABASE=defaultdb
+DB_PASS=
+DB_PORT=
+SSL_CA=
