--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ DB_HOST=localhost
 DB_DATABASE=defaultdb
 DB_PASS=
 DB_PORT=
+SSL_ENABLED=false
 SSL_CA=
 # Discord
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/1341155378423136266/mJD6Rlrwwj7Mroy-47EXK0T2rRknnZMPA9e5aYjOCLwiTwe3W_crjYZlYvrjK6OchoHs"
